app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp1
spec:
  replicas: 2
  template:
	metadata:
  	labels:
    	  app: myapp1
	spec:
  	  containers:
  	  - name: myapp1
    	  image: simplyintricate/hexo
    	  ports:
    	  - containerPort: 80
