app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myappsvc1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp1
