default-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
spec:
  ports:
  - port: 80
	protocol: TCP
	targetPort: 8080
  selector:
	app: default-backend
