nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: kube-1.lab.com
	http:
  	paths:
  	- backend:
      	serviceName: nginx-ingress
      	servicePort: 18080
    	path: /nginx_status
